# Factorio_optimizer

./: .gitignore  README.md  main.py  pyproject.toml  server.py
factorio_optimizer/compiler/: __init__.py  blueprint_blocks.py  bottleneck_diagnostics.py  build_list.py  connectors.py  dependency_edges.py  green_circuit_compiler.py  mid_tier_compiler.py  module_blueprint_compiler.py  power_diagnostics.py  red_science_compiler.py  request.py  result.py  scaling_planner.py  simple_compiler.py  smelting_block_compiler.py  starter_mall_compiler.py  starter_mining_compiler.py  starter_smelting_compiler.py  strategy_constants.py  transport_diagnostics.py
factorio_optimizer/composition/: composition_expander.py  module_composer.py  transport_belt_composition.py
factorio_optimizer/config/: __init__.py  generation_config.py
factorio_optimizer/core/: blueprint_plan.py  errors.py  flows.py  objects.py
factorio_optimizer/data/: belts.py  entities.py  fuels.py  inserters.py  items.py  machines.py  modules.py  power.py  recipes.py  resources.py  saved_layouts.py
factorio_optimizer/dev_tests/: smoke_api.py  smoke_burner_layout.py  smoke_chain_layout.py  smoke_chain_solver.py  smoke_output_maximizer.py  smoke_red_science_milestone.py  (+1 more)
tests/: test_api.py  test_blueprint_blocks.py  test_blueprint_export.py  test_chain_and_layouts.py  test_green_circuit_compiler.py  test_mid_tier_roadmap.py  test_red_science_compiler.py  test_scaling_planner.py  test_starter_mall_compiler.py  test_starter_mining_compiler.py  test_starter_smelting_compiler.py  test_validation.py  test_web_static.py
(+68 files in other folders)
