[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "factorio-optimizer"
version = "0.2.0"
description = "Object-flow based Factorio blueprint optimizer prototype."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["factorio_optimizer*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
